--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+
+.ligth {
+  background-color: beige;
+  color: black;
+}
+
+.dark {
+  background-color: rgb(16, 16, 44);
+  color: white;
 }
